--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> </title>
     </head>
     <body>   
-        <img src="/chakrabortycyber.jpg">
+        <img src="/chakrabortycyber.jpg" width="250" heighth="200">
         <p> I'm Cyber Chakraborty. A Cricketer playing as a Wicket Keeper Batsman.Practicing in Abahani Indoor Stadium. My aim is to represent my country in future.> </p>
   </body>
 </html>
