--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>   
         <img src="/chakrabortycyber.jpg" width="250" heighth="200">
-        <p> I'm Cyber Chakraborty. A Cricketer playing as a Wicket Keeper Batsman.Practicing in Abahani Indoor Stadium. My aim is to represent my country in future.> </p>
+        <p> I'm Cyber Chakraborty. A Cricketer playing as a Wicket Keeper Batsman.Practicing in Abahani Indoor Stadium. My aim is to represent my country in future. </p>
   </body>
 </html>
